--- a/source/site/frontend/css/timer.css
+++ b/source/site/frontend/css/timer.css
@@ -81,3 +81,9 @@ footer {
 #current-task {
   display: inline-block;
 }
+
+
+#c-settings{
+  position: absolute;
+  z-index: 1;
+}
